added wp controller
