# lib/models/playerModel.ts
@@ -1,4 +1,15 @@
 import * as mongoose from 'mongoose';
+import { Team } from './teamModel';
+
+export interface Player {
+    _id: string;
+    prename: string;
+    name: string;
+    number: number;
+    birthday?: string;
+    coach?: Array<string>;
+    team?: Array<Team>;
+}
 
 const Schema = mongoose.Schema;
 
